--- a/MyWpfCoreExcelImport/MainWindow.xaml
+++ b/MyWpfCoreExcelImport/MainWindow.xaml
@@ -1,18 +1,19 @@
 ﻿<Window x:Class="MyWpfCoreExcelImport.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:p="clr-namespace:MyWpfCoreExcelImport.Properties"
         xmlns:local="clr-namespace:MyWpfCoreExcelImport"
         xmlns:tools="clr-namespace:MyWpfCoreExcelImport.Tools"
         tools:WindowsSettings.Save="True"         
+        d:DataContext="d:DesigenInstance Type=MyWpfCoreExcelImport.MainWindow"       
         mc:Ignorable="d"
         Title="MyWpfCoreExcelImport MainWindow" Height="450" Width="800" Loaded="Window_Loaded" Closing="Window_Closing">
     <Grid>
         <Rectangle Fill="#FF5D5D5D" Height="48" Stroke="Black" VerticalAlignment="Top" Margin="10,10,9.6,0" Grid.ColumnSpan="2"/>
         <Label Content="Messages click to clear" HorizontalContentAlignment="Center"	 VerticalAlignment="Top" Margin="32,19,34,0" FontSize="14.667" FontWeight="Bold" FontFamily="Segoe WP Black" Opacity="0.4" Height="29"/>
-        <Label Content="{Binding Message}" ToolTip="Click to clear" VerticalAlignment="Top" Margin="20,19,21,0" Height="29" Background="#FF7A7A7A" MouseDown="Lable_Message_MouseDown" Opacity="0.745" FontWeight="Bold"/>
+        <Label Content="{Binding Path=Message}" ToolTip="Click to clear" VerticalAlignment="Top" Margin="20,19,21,0" Height="29" Background="#FF7A7A7A" MouseDown="Lable_Message_MouseDown" Opacity="0.745" FontWeight="Bold"/>
 
         <Label Content="Connection String" HorizontalAlignment="Left" Margin="10,63,0,0" VerticalAlignment="Top"/>
         <ComboBox IsEditable="True" Text="{Binding NewItem, UpdateSourceTrigger=LostFocus}" SelectedItem="{Binding SelectedItem, Mode=TwoWay}" ItemsSource="{Binding ItemList}" Margin="120,64,90,0"  VerticalAlignment="Top" KeyDown="ComboBox_KeyDown"/>
@@ -76,7 +77,7 @@
 
         <Button Content="#1" Visibility="Visible" ToolTip="For testing and debugging..." ToolTipService.ShowDuration="0x7FFFFFFF" HorizontalAlignment="Right" Margin="0,0,10,160" VerticalAlignment="Bottom" Width="141" Click="Button_1_Click"/>
         <Button Content="View ChangeLog" Visibility="Visible" ToolTip="View the Change Log" ToolTipService.ShowDuration="0x7FFFFFFF" HorizontalAlignment="Right" Margin="0,0,10,135" VerticalAlignment="Bottom" Width="141" Click="Button_ChangeLog_Click"/>
-        <Button Content="Add Default Connection" ToolTip="Load the default connection string, defined in the Settings, into the Connection String ComboBox" ToolTipService.ShowDuration="0x7FFFFFFF" HorizontalAlignment="Right" Margin="0,0,10,110" VerticalAlignment="Bottom" Width="141" Click="Button_AddDefaultConnection_Click"/>
+        <Button Content="Add Default Connections" ToolTip="Load the default connection string, defined in the Settings, into the Connection String ComboBox" ToolTipService.ShowDuration="0x7FFFFFFF" HorizontalAlignment="Right" Margin="0,0,10,110" VerticalAlignment="Bottom" Width="141" Click="Button_AddDefaultConnection_Click"/>
         <Button Content="Import" ToolTipService.ShowDuration="0x7FFFFFFF" HorizontalAlignment="Right" Margin="0,0,10,85" VerticalAlignment="Bottom" Width="141" Click="Button_Import_Click">
             <Button.ToolTip>
                 <ToolTip>
